--- a/navbar.css
+++ b/navbar.css
@@ -47,3 +47,18 @@ body, html {
 .nav-icon:hover {
     transform: scale(1.1);
 }
+.active {
+  animation: animate 0.5s ease-in-out;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(-40%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
